--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>龙凤呈祥 - 乐哥在线</title>
+<title>龙凤呈祥 - 铭媛新媒平台</title>
 <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,7 +18,7 @@
 <body>
     <script>
     var d1 = new Date();
-    var d2 = new Date('2021-6-13 00:00:00');
+    var d2 = new Date('2039-6-13 00:00:00');
     s = d2-d1;
     $(document).ready(function() {
 	$('#counter').countdown({
@@ -69,7 +69,13 @@
 	</audio> 
 	
 <div class="footer">
-	<p>Copyright © 1984 Choong.net 版权所有</p>
+	<p style="color:#FFFFFF;text-decoration:none;">Copyright ©  
+	 <a href="https://choong.net/" style="color:#FFFFFF;text-decoration:none;" title="choong.net"> 
+	  <script>// <![CDATA[
+                 document.write(new Date().getFullYear());
+                 // ]]>
+     </script>
+   </a> </p>
 </div>
 </body>
 </html>
